# arborism

./: .gitignore  .travis.yml  LICENSE  README.md  arborism.cabal  build.sh  trees.cabal
doc/: Tableaux.numbers  presentation.md  problems.txt
lib/: Klein.hs  Lib.hs  ZS.hs
lib/Data/: Arborism.hs  Cost.hs  Deque.hs  Tree.hs
lib/Data/Tree/: Diff.hs  Relevant.hs
src/: Main.hs
test/: check-hlint.hs
