name:                arborism
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/thsutton/arborism#readme
license:             BSD3
license-file:        LICENSE
author:              Thomas Sutton
maintainer:          me@thomas-sutton.id.au
copyright:           Copyright: (c) 2016 Thomas Sutton
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                   , stack.yaml

source-repository HEAD
  type:                git
  location:            https://github.com/thsutton/arborism

library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  exposed-modules:     Data.Arborism
                     , Data.Tree
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , containers

executable arborism
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , arborism

test-suite             check-hlint
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             check-hlint.hs
  build-depends:       base
                     , hlint

test-suite doctests
  default-language:    Haskell2010
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded
  main-is:             doctests.hs
  build-depends:       base
                     , QuickCheck
                     , doctest >= 0.9
