name:                arborism
version:             0.1.0.0
synopsis:            Tree edit distance
description:
  .
  This is a small library of algorithms related to the tree edit
  distance problem. It includes some tools for enumerating and
  visualising these problems, as well as merely solving them.
  .
homepage:            https://github.com/thsutton/arborism#readme
license:             BSD3
license-file:        LICENSE
author:              Thomas Sutton
maintainer:          me@thomas-sutton.id.au
copyright:           Copyright: (c) 2017 Thomas Sutton
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                   , stack.yaml

source-repository HEAD
  type:                git
  location:            https://github.com/thsutton/arborism

library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  exposed-modules:     Data.Arborism
                     , Data.Tree
                     , Data.Cost
                     , Data.Tree.Diff
                     , Data.Tree.Relevant
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , containers
                     , mtl
                     , pureMD5
                     , bytestring

executable arborism
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , arborism
                     , containers

test-suite             check-hlint
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             check-hlint.hs
  build-depends:       base
                     , hlint

test-suite doctests
  default-language:    Haskell2010
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded
  main-is:             doctests.hs
  build-depends:       base
                     , QuickCheck
                     , doctest >= 0.9
