name:                trees
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/thsutton/trees#readme
license:             BSD3
license-file:        LICENSE
author:              Thomas Sutton
maintainer:          me@thomas-sutton.id.au
copyright:           2017 Thomas Sutton
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     Lib
                     , Data.Tree
                     , Data.Cost
                     , Data.Deque
                     , Klein
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable trees-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , trees
  default-language:    Haskell2010

test-suite trees-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , trees
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/thsutton/trees
